# MCU

./: .gitignore  AMSInterface_8cpp.html  AMSInterface_8cpp__incl.map  AMSInterface_8cpp__incl.md5  AMSInterface_8cpp_source.html  AMS__interface__test_8h.html  AMS__interface__test_8h__dep__incl.map  AMS__interface__test_8h__dep__incl.md5  AMS__interface__test_8h__incl.map  AMS__interface__test_8h__incl.md5  AMS__interface__test_8h_source.html  AnalogSensorsInterface_8h.html  AnalogSensorsInterface_8h__dep__incl.map  AnalogSensorsInterface_8h__dep__incl.md5  AnalogSensorsInterface_8h__incl.map  AnalogSensorsInterface_8h__incl.md5  AnalogSensorsInterface_8h_source.html  BaseController_8h.html  BaseController_8h__dep__incl.map  BaseController_8h__dep__incl.md5  BaseController_8h__incl.map  BaseController_8h__incl.md5  BaseController_8h_source.html  BaseLaunchController_8cpp.html  BaseLaunchController_8cpp__incl.map  BaseLaunchController_8cpp__incl.md5  BaseLaunchController_8cpp_source.html  BaseLaunchController_8h.html  BaseLaunchController_8h__dep__incl.map  BaseLaunchController_8h__dep__incl.md5  BaseLaunchController_8h__incl.map  BaseLaunchController_8h__incl.md5  BaseLaunchController_8h_source.html  BasicVehicleMath_8cpp.html  BasicVehicleMath_8cpp_source.html  BasicVehicleMath_8h.html  BasicVehicleMath_8h_source.html  BasicVehicleMath__ert__rtw_2rtwtypes_8h.html  BasicVehicleMath__ert__rtw_2rtwtypes_8h_source.html  BasicVehicleMath__private_8h.html  (+1289 more)
.github/workflows/: docs.yml  platformio.yml
docs/: Doxyfile
include/: InterfaceParams.h  MCU_rev12_dfs.h  MCU_rev15_defs.h  PrintLogger.h
lib/: library.json
lib/BasicVehicleMath_ert_rtw/: BasicVehicleMath.cpp  BasicVehicleMath.h  BasicVehicleMath_private.h  BasicVehicleMath_types.h  CMakeLists.txt  buildInfo.mat  ert_main.cpp  library.json  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
lib/CASE_lib/: library.json
lib/CASE_lib/CASE/HT08_CASE_ert_rtw/: CMakeLists.txt  HT08_CASE.cpp  HT08_CASE.h  HT08_CASE_capi.cpp  HT08_CASE_capi.h  HT08_CASE_private.h  HT08_CASE_types.h  buildInfo.mat
lib/CASE_lib/HyTech_sim/slprj/ert/TRACTION_CONTROL/: CMakeLists.txt  TRACTION_CONTROL.cpp  TRACTION_CONTROL.h  TRACTION_CONTROL_capi.cpp  TRACTION_CONTROL_capi.h  TRACTION_CONTROL_private.h  TRACTION_CONTROL_types.h  buildInfo.mat
lib/CASE_lib/HyTech_sim/slprj/ert/_sharedutils/: CMakeLists.txt  buildInfo.mat  builtin_typeid_types.h  const_params.cpp  interp1_fDh6ZCtI.cpp  interp1_fDh6ZCtI.h  look1_binlxpw.cpp  look1_binlxpw.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_atan2d_snf.cpp  rt_atan2d_snf.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
lib/PID_TV_ert_rtw/: CMakeLists.txt  PID_TV.cpp  PID_TV.h  PID_TV_capi.cpp  PID_TV_capi.h  PID_TV_capi_host.h  PID_TV_private.h  PID_TV_types.h  buildInfo.mat  builtin_typeid_types.h  library.json  rtwtypes.h
lib/components/include/: AMS.h  Dashboard.h  Drivetrain.h  Inverter.h  Logger.h  Pedals.h  Steering.h  Telemetry.h  TorqueVectoringController.h  Watchdog.h
lib/components/src/: Dashboard.cpp  Drivetrain.cpp  Inverter.cpp  Pedals.cpp
lib/drivers/include/: ADCDriver.h  LowerSteeringSensor.h  UpperSteeringSensor.h
lib/drivers/src/: ADCDriver.cpp  AMSDriver.cpp  DashboardDriver.cpp  LoadCell.cpp  SteeringSensor.cpp  SusPot.cpp  UpperSteeringSensor.cpp  VoltageSensor.cpp  Watchdog.cpp
lib/interfaces/: library.json
lib/interfaces/include/: AMSDriver.h  AMSInterface.h  AnalogSensor.h  AnalogSensorInterface.h  AnalogSensorsInterface.h  CircularBuffer.h  DashboardInterface.h  DrivebrainETHInterface.h  DrivebrainInterface.h  EthernetInterface.h  HyTechCANmsg.h  HytechCANInterface.h  IMDDriver.h  IMDInterface.h  InverterInterface.h  InverterInterface.tpp  InvertersInterface.h  LoadCellInterface.h  MCP3208.h  MCP_ADC.h  MCUInterface.h  MCUInterface.tpp  MainControlUnitDriver.h  MessageQueueDefine.h  ORBIS_BR10.h  ParamMsgInterface.h  PedalsInterface.h  (+16 more)
lib/mock_interfaces/: AMSInterface.h  AnalogSensorsInterface.h  DashboardInterface.h  DrivebrainInterface.h  Filter_IIR.h  HytechCANInterface.h  IMDInterface.h  InverterInterface.h  LoadCellInterface.h  MCUInterface.h  ParameterInterface.h  ProtobufMsgInterface.h  SteeringEncoderInterface.h  TelemetryInterface.h  TorqueControllerData.h  VectornavInterface.h  WatchdogInterface.h
lib/shared_data/: library.json
lib/systems/: library.json
proto/: ht_msgs.proto
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+118 more)
src/: SteeringComponent.h  component.h  driver.h  main.cpp  main_calib_orbis.cpp  main_ethernet_test.cpp  main_minimal.cpp  main_spi_test.cpp  old-main  old_main.cpp  proto_main.cpp  test_can_interface.cpp
test/: drivetrain_system_test.h  main.cpp  pedals_system_test.h  state_machine_test.cpp  state_machine_test.h
test/test_interfaces/: AMS_interface_test.h  CAN_testing_utilities.h  Coulomb_Counting_Tests.h  MCP_ADC_test.h  MCU_interface_test.h  ORBIS_Steering _test.h  Telemetry_interface_test.h  Watchdog_interface_test.h  can_interface_test.h  dashboard_interface_test.cpp  dashboard_interface_test.h  run_embedded_tests.cpp  test_ethernet.h  test_interfaces.cpp
test/test_systems/: ams_system_test.h  controller_mux_test.h  dashboard_interface_test.h  drivebrain_controller_test.h  drivetrain_system_test.h  etherbuf_test.h  fake_controller_type.h  launch_controller_integration_testing.h  main.cpp  param_system_test.h  pedals_system_test.h  safety_system_test.h  state_machine_test.h  steering_system_test.h  tc_mux_v2_testing.h  test_CASE.h  torque_controller_mux_test.h
test/test_yo/: pedals_system_test.cpp  test_str.cpp
(+269 files in other folders)
